--- a/src/style.css
+++ b/src/style.css
@@ -77,11 +77,13 @@ h1 {
 }
 
 .ball {
+  top: 0;
+  left: 0;
   position: absolute;
   width: 10px;
   height: 10px;
   background-color: #1a1a1a;
-  transform-origin: bottom center;
+  transform-origin: bottom left;
 }
 
 .big {
